<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Podcastinate</string>
    <string name="action_settings">Settings</string>
    <string name="button_subscribe">Subscribe</string>
    <string name="action_wipe_db">Wipe DB</string>
    <string name="ic_download">DownloadIcon</string>
    <string name="title_activity_download">Downloads</string>
    <string name="action_add_feed">Add Feed</string>
    <string name="title_subscribe">Subscribe</string>
    <string name="title_podcasts">Podcasts</string>
    <string name="ic_play">PlayButton</string>
    <string name="ic_pause">PauseButton</string>
    <string name="mainPlayButton">Main Play Button</string>
    <string name="action_discard">Discard</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="refresh_feed">Refresh Feed</string>
    <string name="baseElapsedTime">00:00</string>
    <string name="rewindButton">rewindButton</string>
    <string name="fastForward">fastForward</string>
    <string name="podcastImage">podcastImage</string>
    <string name="manualUrlEntry">Manual URL Entry</string>
    <string name="searchButton">Search</string>
    <string name="searchServerSideAPI">Search Server Side API</string>
    <string name="title_activity_search_results">No Results</string>
    <string name="searchResultImage">searchResultImage</string>
    <string name="title_activity_recommendation">RecommendationActivity</string>
    <string name="searchPodcastsHint">Search for Podcasts</string>
    <string name="enterURLHint">Enter (or cut/paste) URL</string>
    <string name="recommendationImage">recommendationImage</string>
    <string name="openDrawerText">Menu</string>
    <string name="closeDrawerText">Podcasts</string>
    <string name="demo_refresh">Demo Refresh</string>
    <string name="title_podcast_viewer">…</string>
    <string name="mark_played">Mark as played</string>
    <string name="mark_as_new">Mark as new</string>
    <string name="podcastArtImage">podcastArtImage</string>
    <string name="enable_car_mode">Enable Car Mode</string>
    <string name="enable_car_mode_summary">Car mode makes the player contols large and easy to use while it detects the user is driving</string>
    <string name="title_activity_settings_activity">Settings</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="how_often">How Often?</string>
    <string name="default_refresh">30 mins</string>
    <string name="refresh_interval_summary">How often subscriptions should refresh?</string>
    <string name="audio_notification_enabled">Persistent Audio Notification</string>
    <string name="wipe_database">Wipe local database</string>
    <string name="wipe_database_summary">Delete everything in local database and restore app default state</string>
    <string name="grid_view_enabled">Enable Grid View</string>
    <string name="grid_view_enabled_summary">Switches to List View if disabled</string>

    <string-array name="nav_drawer_titles">
        <item>Podcasts</item>
        <item>Find Similar</item>
        <item>Subscribe</item>
        <item>Player</item>
    </string-array>

</resources>
