<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="car_mode_enabled"
        android:title="@string/enable_car_mode"
        android:summary="@string/enable_car_mode_summary"
        android:defaultValue="true" />

    <ListPreference
        android:key="refresh_interval"
        android:title="@string/refresh_interval"
        android:summary="@string/refresh_interval_summary"
        android:dialogTitle="@string/how_often"
        android:entries="@array/pref_refresh_interval_entries"
        android:entryValues="@array/pref_refresh_interval_values"
        android:defaultValue="@string/default_refresh" />

    <CheckBoxPreference
        android:key="audio_notification_enabled"
        android:title="@string/audio_notification_enabled"
        android:defaultValue="true" />

    <Preference
        android:key="wipe_db"
        android:summary="@string/wipe_database_summary"
        android:title="@string/wipe_database" >
        <intent
            android:targetPackage="com.shanewhelan.podcastinate.activities"
            android:targetClass="com.shanewhelan.podcastinate.activities.SettingsActivity"
            android:action="wipe_db_action" />
    </Preference>

</PreferenceScreen>