<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_feed_action"
        android:icon="@drawable/ic_action_add_feed"
        android:title="@string/action_add_feed"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh_feed"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_remove_2_podcasts"
        android:title="@string/demo_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"/>
</menu>
