<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              tools:context=".SubscribeActivity">

    <ProgressBar
        android:id="@+id/searchProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
        android:visibility="gone"
        android:layout_marginTop="-6dp"
        android:layout_marginBottom="-6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingLeft="10dp"
        android:text="@string/searchServerSideAPI" />

    <EditText
        android:id="@+id/edit_text_search_arguments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/searchPodcastsHint"
        android:inputType="textNoSuggestions"
        android:imeOptions="actionSearch"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/searchButton"
        android:layout_gravity="bottom"
        android:fontFamily="sans-serif"
        android:freezesText="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingLeft="10dp"
        android:text="@string/manualUrlEntry"/>

    <EditText
        android:id="@+id/edit_text_feed_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/enterURLHint"
        android:inputType="textUri"
        android:imeOptions="actionGo" />

    <Button
        android:id="@+id/button_subscribe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/button_subscribe"
        android:layout_gravity="bottom"
        android:fontFamily="sans-serif"
        android:freezesText="false"/>
</LinearLayout>