<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1.0"
              android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/episodeName"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="0.8"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:textColor="#4c4a4a"
        android:background="@drawable/on_click_selector"/>

    <ImageButton
        android:id="@+id/download_icon"
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:layout_height="65dp"
        android:background="@drawable/download_icon_selector"
        android:contentDescription="@string/ic_download" />
    <ImageButton
        android:id="@+id/play_icon"
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:layout_height="65dp"
        android:background="@drawable/play_icon_selector"
        android:visibility="gone"
        android:contentDescription="@string/ic_play" />
    <ImageButton
        android:id="@+id/pause_icon"
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:layout_height="65dp"
        android:background="@drawable/pause_icon_selector"
        android:visibility="gone"
        android:contentDescription="@string/ic_pause" />

</LinearLayout>