<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="1">

            <ProgressBar
                android:id="@+id/smoothProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
                android:visibility="gone"
                android:layout_marginTop="-6dp"
                android:layout_marginBottom="-6dp" />

            <FrameLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <GridView
                    android:id="@+id/listOfPodcasts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:verticalSpacing="3dp"
                    android:horizontalSpacing="3dp"
                    android:stretchMode="columnWidth"
                    android:numColumns="2" />
            </FrameLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:background="@drawable/control_panel_selector"
            android:id="@+id/controlPanel">

            <ImageView
                android:id="@+id/cpPodcastArt"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="fitCenter"
                android:layout_alignParentLeft="true"
                android:padding="5dp"
                android:contentDescription="@string/podcastArtImage"/>

            <TextView
                android:id="@+id/cpEpisodeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:layout_toLeftOf="@+id/cpPauseButton"
                android:layout_toRightOf="@id/cpPodcastArt"
                android:lines="2"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/cpPodcastTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:layout_toLeftOf="@+id/cpPauseButton"
                android:layout_toRightOf="@id/cpPodcastArt"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:lines="1"
                android:ellipsize="end"/>

            <ImageButton
                android:id="@+id/cpPlayButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:scaleType="fitXY"
                android:src="@drawable/cp_play_icon_selector"
                android:background="@drawable/control_panel_selector"
                android:contentDescription="@string/mainPlayButton"/>

            <ImageButton
                android:id="@id/cpPauseButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_toLeftOf="@id/cpPlayButton"
                android:visibility="gone"
                android:scaleType="fitXY"
                android:src="@drawable/cp_pause_icon_selector"
                android:background="@drawable/control_panel_selector"
                android:contentDescription="@string/ic_pause"/>
        </RelativeLayout>

    </LinearLayout>

    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
              android:layout_width="240dp"
              android:layout_height="match_parent"
              android:layout_gravity="left"
              android:choiceMode="singleChoice"
              android:divider="#666"
              android:dividerHeight="1dp"
              android:background="#333"
              android:paddingLeft="5dp"
              android:paddingRight="5dp" />

</android.support.v4.widget.DrawerLayout>